Bug 591576 - [comm-central] widget/src/windows/GfxInfo.cpp now reports various errors r=khuey a=bustage-fix